<?xml version="1.0" encoding="UTF-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/quadrado" >

        <EditText
            android:id="@+id/Cmp_Nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Btn_Salvar"
            android:layout_toRightOf="@+id/textView2"
            android:ems="10"
            android:hint="@string/Cmp_Nome" />

        <Button
            android:id="@+id/Btn_Salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/Cmp_Nome"
            android:text="@string/Btn_Salvar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Username"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Cmp_Nome"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:text="@string/Welcome"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
